SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/Custom_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Amount__c</fullName>
    <label>EBizCharge Custom Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>