SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizCharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Amount__c</fullName>
    <label>EBizCharge Email Pay Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>