SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizCharge_CST_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_CST_Amount__c</fullName>
    <formula>Account.EBizCharge_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBizCharge  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>