SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizCharge_CST_Tax__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_CST_Tax__c</fullName>
    <formula>Account.EBizCharge_Account_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBizCharge Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>