SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizcharge_Email__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Email__c</fullName>
    <formula>Account.EBizCharge_Email__c</formula>
    <label>EBizCharge Email</label>
    <type>Text</type>
</CustomField>