SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizCharge_Opportunity_Balance__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Opportunity_Balance__c</fullName>
    <label>EBizCharge Opportunity Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>