SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizCharge_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Opportunity_Status__c</fullName>
    <label>EBizCharge Opportunity Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>