SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/EBizCharge_PONumber__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_PONumber__c</fullName>
    <label>EBizCharge PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>