SFQBD/Ebiz/force-app/main/default/objects/Opportunity/fields/Is_Updated_From_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_From_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Updated From Gateway</label>
    <type>Checkbox</type>
</CustomField>